--- a/themes/bcr_bootstrap/sass/_page.scss
+++ b/themes/bcr_bootstrap/sass/_page.scss
@@ -5,10 +5,10 @@ body {
 // page layout
 
 #homepage-panel {
-  width: 704px;
-  padding-top: 360px;
-  background: url(../images/logotypebig.png) no-repeat 0px 20px;
-  background-size: 700px;
+//  width: 704px;
+//  padding-top: 360px;
+//  background: url(../images/logotypebig.png) no-repeat 0px 20px;
+//  background-size: 700px;
 
   .panels-flexible-region-4-center {
     width: 100%;
