--- a/themes/bcr_bootstrap/sass/_channel-display.scss
+++ b/themes/bcr_bootstrap/sass/_channel-display.scss
@@ -12,6 +12,7 @@ $gutter_adjust: 20px;
   text-align: center;
   margin: 0px 10px 0;
 
+  padding-top: 60px;
   padding-bottom: 160px;
 
   background: white url(../images/logospot_footer.png) no-repeat bottom 60px center;
